@@ -1,79 +1,51 @@
 plugins {
-    id 'uk.gov.hmcts.java' version '0.12.0'
+    id 'org.owasp.dependencycheck' version '6.0.1'
     id 'scala'
     id 'com.github.lkishalmi.gatling' version '3.0.2'
-//    id 'java-gradle-plugin'
+    //id 'java-gradle-plugin'
     id 'groovy'
-    id 'com.gradle.plugin-publish' version '0.12.0'
+    id 'com.gradle.plugin-publish' version '0.9.8'
     id 'maven-publish'
 }
-
 //apply plugin: 'java'
 apply plugin: 'scala'
 group 'uk.gov.hmcts.reform'
 version = '1.0'
-
+sourceCompatibility = "11"
+targetCompatibility = "11"
 tasks.withType(JavaExec) {
-    jvmArgs = ['-Xms512m', '-Xmx1024m', '-XX:+UseConcMarkSweepGC']
+    jvmArgs = ['-Xms1024m', '-Xmx2048m']
+    /* Use the following args to build a report when a test was terminated
+    args = [
+        "--reports-only", "fact-20201109092032896",
+        '--results-folder', file('build/reports/gatling').absolutePath,
+        ]
+    */
 }
-
-//sourceCompatibility = "11"
-//targetCompatibility = "11"
-
-/*dependencyCheck {	
-    suppressionFile = 'config/owasp/suppressions.xml'
-}*/
-
 repositories {
     jcenter()
 }
-
-//jar {
-//    manifest {
-//        attributes 'Implementation-Title': 'EXUI Performance Tests',
-//                'Implementation-Version': version
-//    }
-//}
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'io.gatling.app.Gatling'
-    }
-    from {
-        configurations.testCompile.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    from sourceSets.test.output
-    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
+ScalaCompileOptions.metaClass.daemonServer = true
+ScalaCompileOptions.metaClass.fork = true
+ScalaCompileOptions.metaClass.useAnt = false
+ScalaCompileOptions.metaClass.useCompileDaemon = false
+ext {
+    gatlingVersion = '3.3.1'
+    scalaVersion = '2.12.12'
 }
-
-/*dependencyCheck {
-    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
-    // range of 0-10 fails the build, anything greater and it doesn't fail the build
-    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
-    suppressionFile = 'dependency-check-suppressions.xml'
-}*/
-
-repositories {
-    jcenter()
-}
-
 dependencies {
-    //compile 'org.scala-lang:scala-library:2.12.8'
-    gatlingCompile 'com.warrenstrange:googleauth:1.1.5'
-    //compile group: 'io.gatling', name: 'gatling-app', version: '3.1.1'
-    //compile group: 'io.gatling', name: 'gatling-recorder', version: '3.1.1'
-    //compile group: 'io.gatling.highcharts', name: 'gatling-charts-highcharts', version: '3.1.1'
-    //gatlingCompile group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '3.14.1-RELEASE'
+    compile "org.scala-lang:scala-library:${scalaVersion}"
+    gatling "io.gatling:gatling-app:${gatlingVersion}"
+    gatling "io.gatling.highcharts:gatling-charts-highcharts:${gatlingVersion}"
+    //gatlingImplementation "groupio.rest-assured:rest-assured:4.3.1"
+    gatling "com.warrenstrange:googleauth:1.5.0"
 }
-
 gatling {
-    toolVersion '3.1.1'
-    scalaVersion '2.12.8'
+    toolVersion '3.3.1'
+    scalaVersion '2.12.12'
     simulations = [ 'uk.gov.hmcts.reform.LandA.performance.simulations.mainSimulation'
     ]
 }
-
-
 test {
     testLogging {
         showStandardStreams = true
@@ -81,12 +53,10 @@ test {
     dependsOn("publishToMavenLocal")
     systemProperty "com.github.lkishalmi.gatling.version", project.version
 }
-
 pluginBundle {
     website = 'https://github.com/lkishalmi/gradle-gatling-plugin'
     vcsUrl = 'https://github.com/lkishalmi/gradle-gatling-plugin'
     description = 'Gatling Simulation Execution'
     tags = ['gatling', 'load test', 'stress test', 'performance test', 'scala']
 }
-
 ext ['netty.version'] = '4.0.51.Final'
